--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,12 +28,11 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx",
     "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
-  ],
+    "tests/**/*.js",
+    "tests/**/*.jsx"],
   "exclude": [
     "node_modules"
   ]
