--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/vue": "^6.6.2",
+    "@ionic/vue-router": "^6.6.2",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
+    "pinia": "^2.0.33",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
