--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ionic/vue": "^6.6.2",
     "@ionic/vue-router": "^6.6.2",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "ionicons": "^6.0.3",
     "pinia": "^2.0.33",
     "vue": "^3.2.21",
